Allow security manager in CLI rendering tool
Since JDK 19 Security Manager is disallowed by default. It needs
to be explicitly allowed for the rendering tool to work correctly
with the most recent JDKs.

Bug: 315809479
Test: tested manually
Change-Id: I05649af294837b7d494eab9518c235ff7303936e